fix: User permissions issue